--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <meta name="msapplication-TileColor" content="#00a300">
 <meta name="msapplication-TileImage" content="/assets/img/mstile-144x144.png">
 <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-  <link rel="stylesheet" type="text/css" href="assets/css/uno.css?v=48c787bbec" />
-  <link rel="stylesheet" type="text/css" href="assets/css/prism.css?v=48c787bbec" />
+  <link rel="stylesheet" type="text/css" href="assets/css/uno.css?v=5ae05e9b8c" />
+  <link rel="stylesheet" type="text/css" href="assets/css/prism.css?v=5ae05e9b8c" />
 
   <link rel="canonical" href="http://localhost:2368/" />
     <meta name="referrer" content="origin" />
@@ -39,11 +39,11 @@
     <meta property="og:site_name" content="Justin Toh" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Justin Toh" />
-    <meta property="og:description" content="Web Development + UI/UX Design" />
+    <meta property="og:description" content="UBC Year 3 CPEN • Web Developer" />
     <meta property="og:url" content="http://localhost:2368/" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Justin Toh" />
-    <meta name="twitter:description" content="Web Development + UI/UX Design" />
+    <meta name="twitter:description" content="UBC Year 3 CPEN • Web Developer" />
     <meta name="twitter:url" content="http://localhost:2368/" />
     
     <script type="application/ld+json">
@@ -52,7 +52,7 @@
     "@type": "Website",
     "publisher": "Justin Toh",
     "url": "http://localhost:2368/",
-    "description": "Web Development + UI/UX Design"
+    "description": "UBC Year 3 CPEN • Web Developer"
 }
     </script>
 
@@ -77,7 +77,7 @@
         <h3 id="profile-resume">3rd Year CPEN Student @ UBC</h3>
       </a>
       <hr class="divider long" />
-      <p>Web Development + UI/UX Design</p>
+      <p>UBC Year 3 CPEN • Web Developer</p>
       <hr class="divider short" />
       <div class="navigation">
         <div class="profile contact">
@@ -176,8 +176,8 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.6/zepto.min.js"></script>
 <script>jQuery = Zepto</script>
 
-  <script type="text/javascript" src="assets/js/uno.js?v=48c787bbec"></script>
-  <script type="text/javascript" src="assets/js/prism.js?v=48c787bbec"></script>
+  <script type="text/javascript" src="assets/js/uno.js?v=5ae05e9b8c"></script>
+  <script type="text/javascript" src="assets/js/prism.js?v=5ae05e9b8c"></script>
 
   </script>
 
