Edit sidebar description

--- a/first-blog-post/index.html
+++ b/first-blog-post/index.html
@@ -94,7 +94,8 @@
       <!-- <a id="avatar-link" title="link to homepage for Justin Toh" href="http://localhost:2368/#open"> -->
         <img src="../content/images/2016/04/Screen-Shot-2016-04-24-at-17-21-43.png" alt="Justin Toh avatar" class="profile avatar hvr-buzz-out" />
         <h1>Justin Toh</h1>
-        <h3 id="profile-resume">3rd Year CPEN Student @ UBC</h3>
+        <!-- <h3 id="profile-resume">UBC Year 3 CPEN • Web Developer</h3> -->
+        <h3 id="profile-resume">Web Developer</h3>
       </a>
       <hr class="divider long" />
       <p>UBC Year 3 CPEN • Web Developer</p>
