Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <meta name="msapplication-TileColor" content="#00a300">
 <meta name="msapplication-TileImage" content="/assets/img/mstile-144x144.png">
 <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-  <link rel="stylesheet" type="text/css" href="assets/css/uno.css?v=68c93f73fa" />
-  <link rel="stylesheet" type="text/css" href="assets/css/prism.css?v=68c93f73fa" />
+  <link rel="stylesheet" type="text/css" href="assets/css/uno.css?v=7e8d9add11" />
+  <link rel="stylesheet" type="text/css" href="assets/css/prism.css?v=7e8d9add11" />
 
   <link rel="canonical" href="http://localhost:2368/" />
     <meta name="referrer" content="origin" />
@@ -188,12 +188,18 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.6/zepto.min.js"></script>
 <script>jQuery = Zepto</script>
 
-  <script type="text/javascript" src="assets/js/uno.js?v=68c93f73fa"></script>
-  <script type="text/javascript" src="assets/js/prism.js?v=68c93f73fa"></script>
+  <script type="text/javascript" src="assets/js/uno.js?v=7e8d9add11"></script>
+  <script type="text/javascript" src="assets/js/prism.js?v=7e8d9add11"></script>
 
   </script>
 
   <script>
-</script>
-</body>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-77107001-1', 'auto');
+  ga('send', 'pageview');
+</script></body>
 </html>
