--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
         <img src="content/images/2016/04/Screen-Shot-2016-04-24-at-17-21-43.png" alt="Justin Toh avatar" class="profile avatar hvr-buzz-out" />
         <h1>Justin Toh</h1>
         <!-- <h3 id="profile-resume">UBC Year 3 CPEN • Web Developer</h3> -->
-        <h3 id="profile-resume">Web Developer</h3>
+        <h3 id="profile-resume">Software Developer</h3>
       </a>
       <hr class="divider long" />
-      <p>UBC Year 3 CPEN • Web Developer</p>
+      <p>UBC Year 3 CPEN • Software Developer</p>
       <hr class="divider short" />
       <div class="navigation">
         <div class="profile contact">
           <nav class="navigation left">
   <ul class="links">
     <li class="links item">
-      <a target="_blank" href="https://www.dropbox.com/s/pkfha156zhdvaka/Justin%20Resume%20MAY16.pdf?dl=0" class="link-item" title="Résumé" id="resume-button">Résumé</a>
+      <a target="_blank" href="https://www.dropbox.com/s/eqq0hhwblvt98gr/Justin%20Resume%20OCT16.pdf?dl=0" class="link-item" title="Résumé" id="resume-button">Résumé</a>
       <a href="index.html#open" class="link-item" title="link to Justin Toh blog" id="blog-button">Blog</a>
       <a href="mailto:tohjustin@hotmail.com?subject=Hello, I saw your webpage!" class="link-item" title="Contact" id="contact-button">Contact</a>
     </li>
