--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-    <h1>HEADER 1</h1>
-    <h2>HEADER 2</h2>
-    <h3>HEADER 3</h3>
+    <h1>Hello World</h1>
+    <h2>Lorem Ipsum</h2>
     <script type="text/javascript" src="./app.min.js"></script>
 </body>
 
