html: Add all webpage content elements

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,18 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <h2>Lorem Ipsum</h2>
+    <img src="./dist/images/avatar.png">
+    <button>Email Me!</button>
+    <div>Hi, I'm Justin!</div>
+    <div>4th Year Student @ UBC Computer Engineering</div>
+    <div>My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
+    <div>BTW, I’m actively looking for job opportunities commencing in 2018!</div>
+    <div>
+      <i class="fa fa-github-square" aria-hidden="true"></i>
+      <i class="fa fa-behance-square" aria-hidden="true"></i>
+      <i class="fa fa-medium" aria-hidden="true"></i>
+      <i class="fa fa-file-text" aria-hidden="true"></i>
+    </div>
     <script type="text/javascript" src="./dist/app.min.js"></script>
 </body>
 
