styles: Add styling for Email button

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <img src="./dist/images/avatar.png">
-    <button>Email Me!</button>
+    <button class="btn btn--primary">Email Me!</button>
     <div>Hi, I'm Justin!</div>
     <div>4th Year Student @ UBC Computer Engineering</div>
     <div>My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
