--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="./dist/images/avatar.png">
+    <img class="avatar" src="./dist/images/avatar.png">
     <button class="btn btn--primary">Email Me!</button>
     <div>Hi, I'm Justin!</div>
     <div>4th Year Student @ UBC Computer Engineering</div>
