styles: Add styling for text content

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,12 @@
 <body>
     <img class="avatar" src="./dist/images/avatar.png">
     <button class="btn btn--primary">Email Me!</button>
-    <div>Hi, I'm Justin!</div>
-    <div>4th Year Student @ UBC Computer Engineering</div>
-    <div>My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
-    <div>BTW, I’m actively looking for job opportunities commencing in 2018!</div>
+    <div>
+      <div class="content--title">Hi, I'm Justin!</div>
+      <div class="content--description">4th Year Student @ UBC Computer Engineering</div>
+    </div>
+    <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
+    <div class="content--body">BTW, I’m actively looking for job opportunities commencing in 2018!</div>
     <div>
       <i class="fa fa-github-square" aria-hidden="true"></i>
       <i class="fa fa-behance-square" aria-hidden="true"></i>
