styles: Add styling for icons

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Frontend Project Template</title>
 </head>
 
-<body>
+<body class="body">
     <img class="avatar" src="./dist/images/avatar.png">
     <button class="btn btn--primary">Email Me!</button>
     <div>
@@ -15,7 +15,7 @@
     </div>
     <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
     <div class="content--body">BTW, I’m actively looking for job opportunities commencing in 2018!</div>
-    <div>
+    <div class="icon">
       <i class="fa fa-github-square" aria-hidden="true"></i>
       <i class="fa fa-behance-square" aria-hidden="true"></i>
       <i class="fa fa-medium" aria-hidden="true"></i>
