styles: Add styling for overall layout

--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,27 @@
 </head>
 
 <body class="body">
-    <img class="avatar" src="./dist/images/avatar.png">
-    <button class="btn btn--primary">Email Me!</button>
-    <div>
-      <div class="content--title">Hi, I'm Justin!</div>
-      <div class="content--description">4th Year Student @ UBC Computer Engineering</div>
-    </div>
-    <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
-    <div class="content--body">BTW, I’m actively looking for job opportunities commencing in 2018!</div>
-    <div class="icon">
-      <i class="fa fa-github-square" aria-hidden="true"></i>
-      <i class="fa fa-behance-square" aria-hidden="true"></i>
-      <i class="fa fa-medium" aria-hidden="true"></i>
-      <i class="fa fa-file-text" aria-hidden="true"></i>
+    <div class="card">
+      <div class="card--topPanel">
+        <div class="card--topPanel__left">
+          <img class="avatar" src="./dist/images/avatar.png">
+          <button class="btn btn--primary">Email Me!</button>
+        </div>
+        <div class="card--topPanel__right content">
+          <div>
+            <div class="content--title">Hi, I'm Justin!</div>
+            <div class="content--description">4th Year Student @ UBC Computer Engineering</div>
+          </div>
+          <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
+          <div class="content--body">BTW, I’m actively looking for job opportunities commencing in 2018!</div>
+        </div>
+      </div>
+      <div class="card--bottomPanel icon">
+        <i class="fa fa-github-square" aria-hidden="true"></i>
+        <i class="fa fa-behance-square" aria-hidden="true"></i>
+        <i class="fa fa-medium" aria-hidden="true"></i>
+        <i class="fa fa-file-text" aria-hidden="true"></i>
+      </div>
     </div>
     <script type="text/javascript" src="./dist/app.min.js"></script>
 </body>
