icons: Attach respective links to each icons

--- a/index.html
+++ b/index.html
@@ -6,18 +6,36 @@
     <title>Frontend Project Template</title>
 </head>
 
-<body>
-    <img src="./dist/images/avatar.png">
-    <button>Email Me!</button>
-    <div>Hi, I'm Justin!</div>
-    <div>4th Year Student @ UBC Computer Engineering</div>
-    <div>My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
-    <div>BTW, I’m actively looking for job opportunities commencing in 2018!</div>
-    <div>
-      <i class="fa fa-github-square" aria-hidden="true"></i>
-      <i class="fa fa-behance-square" aria-hidden="true"></i>
-      <i class="fa fa-medium" aria-hidden="true"></i>
-      <i class="fa fa-file-text" aria-hidden="true"></i>
+<body class="body">
+    <div class="card">
+      <div class="card--topPanel">
+        <div class="card--topPanel__left">
+          <img class="avatar" src="./dist/images/avatar.png">
+          <button class="btn btn--primary">Email Me!</button>
+        </div>
+        <div class="card--topPanel__right content">
+          <div>
+            <div class="content--title">Hi, I'm Justin!</div>
+            <div class="content--description">4th Year Student @ UBC Computer Engineering</div>
+          </div>
+          <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
+          <div class="content--body">By the way, I’m currently looking for job opportunities commencing in 2018!</div>
+        </div>
+      </div>
+      <div class="card--bottomPanel icon">
+        <a target="_blank" href="https://github.com/tohjustin">
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+        </a>
+        <!-- <a target="_blank" href="https://www.behance.net/tohjustina164?">
+          <i class="fa fa-behance-square" aria-hidden="true"></i>
+        </a> -->
+        <a target="_blank" href="https://medium.com/@justintoh">
+          <i class="fa fa-medium" aria-hidden="true"></i>
+        </a>
+        <a target="_blank" href="https://www.dropbox.com/s/dzfziz8of55tb33/Justin%20Resume%20MAY17.pdf?dl=0">
+          <i class="fa fa-file-text" aria-hidden="true"></i>
+        </a>
+      </div>
     </div>
     <script type="text/javascript" src="./dist/app.min.js"></script>
 </body>
