--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,22 @@
             <div class="content--description">4th Year Student @ UBC Computer Engineering</div>
           </div>
           <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
-          <div class="content--body">BTW, I’m actively looking for job opportunities commencing in 2018!</div>
+          <div class="content--body">By the way, I’m currently looking for job opportunities commencing in 2018!</div>
         </div>
       </div>
       <div class="card--bottomPanel icon">
-        <i class="fa fa-github-square" aria-hidden="true"></i>
-        <i class="fa fa-behance-square" aria-hidden="true"></i>
-        <i class="fa fa-medium" aria-hidden="true"></i>
-        <i class="fa fa-file-text" aria-hidden="true"></i>
+        <a target="_blank" href="https://github.com/tohjustin">
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+        </a>
+        <!-- <a target="_blank" href="https://www.behance.net/tohjustina164?">
+          <i class="fa fa-behance-square" aria-hidden="true"></i>
+        </a> -->
+        <a target="_blank" href="https://medium.com/@justintoh">
+          <i class="fa fa-medium" aria-hidden="true"></i>
+        </a>
+        <a target="_blank" href="https://www.dropbox.com/s/dzfziz8of55tb33/Justin%20Resume%20MAY17.pdf?dl=0">
+          <i class="fa fa-file-text" aria-hidden="true"></i>
+        </a>
       </div>
     </div>
     <script type="text/javascript" src="./dist/app.min.js"></script>
