--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./dist/style.min.css">
-    <title>Frontend Project Template</title>
+    <title>Justin Toh | Personal Profile</title>
 </head>
 
 <body class="body">
