html: Add  link to email button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <div class="card--topPanel">
         <div class="card--topPanel__left">
           <img class="avatar" src="./dist/images/avatar.png">
-          <button class="btn btn--primary">Email Me!</button>
+          <a href="mailto:tohjustin@hotmail.com?subject=Hi%20Justin!">
+            <button class="btn btn--primary">Email Me!</button>
+          </a>
         </div>
         <div class="card--topPanel__right content">
           <div>
