--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" type="image/png" sizes="512x512" href="/dist/images/icon-512x512.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="/dist/images/icon-384x384.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/dist/images/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="152x152" href="/dist/images/icon-152x152.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="/dist/images/icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="/dist/images/icon-128x128.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/dist/images/icon-96x96.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="/dist/images/icon-72x72.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/dist/images/icon-512x512.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="384x384" href="/dist/images/icon-384x384.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/dist/images/icon-192x192.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="/dist/images/icon-152x152.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="/dist/images/icon-144x144.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="128x128" href="/dist/images/icon-128x128.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="96x96" href="/dist/images/icon-96x96.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="/dist/images/icon-72x72.png">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./dist/style.min.css">
