--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="body">
-    <div class="card">
+    <div class="card card--animation">
       <div class="card--topPanel">
         <div class="card--topPanel__left">
           <img class="avatar" src="./dist/images/avatar.png">
