html: Update description text

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <div class="card--topPanel__right content">
           <div>
             <div class="content--title">Hi, I'm Justin!</div>
-            <div class="content--description">4th Year Student @ UBC Computer Engineering</div>
+            <div class="content--description">4th Year Student | UBC Computer Engineering</div>
           </div>
           <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
           <div class="content--body">By the way, I’m currently looking for job opportunities commencing in 2018!</div>
