--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             <div class="content--description">4th Year Student | UBC Computer Engineering</div>
           </div>
           <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
-          <div class="content--body">By the way, I’m currently looking for job opportunities commencing in 2018!</div>
+          <div class="content--body">Currently looking for job opportunities commencing after graduation (May 2018).</div>
         </div>
       </div>
       <div class="card--bottomPanel icon">
