html: Update link to resume

--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
         <a target="_blank" href="https://github.com/tohjustin">
           <i class="fa fa-github-square" aria-hidden="true"></i>
         </a>
-        <!-- <a target="_blank" href="https://www.behance.net/tohjustina164?">
-          <i class="fa fa-behance-square" aria-hidden="true"></i>
-        </a> -->
         <a target="_blank" href="https://medium.com/@justintoh">
           <i class="fa fa-medium" aria-hidden="true"></i>
         </a>
-        <a target="_blank" href="https://www.dropbox.com/s/kub3pu740mor0ti/Justin%20Resume%20MAY17.pdf?dl=0">
+        <a target="_blank" href="/dist/resume.pdf">
           <i class="fa fa-file-text" aria-hidden="true"></i>
         </a>
       </div>
