project: Set website to construction mode

--- a/index.html
+++ b/index.html
@@ -21,48 +21,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./dist/style.min.css">
-    <title>Justin Toh | Personal Profile</title>
+    <title>Hi, I'm Justin!</title>
 </head>
 
 <body class="body">
-    <div class="card card--animation">
-      <div class="card--topPanel">
-        <div class="card--topPanel__left">
-          <img class="avatar" src="./dist/images/avatar.png">
-          <a href="mailto:tohjustin@hotmail.com?subject=Hi%20Justin!">
-            <button class="btn btn--primary">Email Me!</button>
-          </a>
-        </div>
-        <div class="card--topPanel__right content">
-          <div>
-            <div class="content--title">Hi, I'm Justin!</div>
-            <div class="content--description">4th Year Student | UBC Computer Engineering</div>
-          </div>
-          <div class="content--body">My passion lies in using modern web technologies to build complex systems & create amazing user interfaces.</div>
-          <div class="content--body">Currently looking for job opportunities commencing after graduation (May 2018).</div>
-        </div>
-      </div>
-      <div class="card--bottomPanel icon">
-        <a target="_blank" href="https://github.com/tohjustin">
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-        </a>
-        <a target="_blank" href="https://medium.com/@justintoh">
-          <i class="fa fa-medium" aria-hidden="true"></i>
-        </a>
-        <a target="_blank" href="/dist/resume.pdf">
-          <i class="fa fa-file-text" aria-hidden="true"></i>
-        </a>
-      </div>
-    </div>
-    <script type="text/javascript" src="./dist/app.min.js"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-77107001-1', 'auto');
-      ga('send', 'pageview');
-    </script>
+  <div>New Site under construction...</div>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-77107001-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 
 </html>
