--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,13 @@
     <title>Hi, I'm Justin!</title>
 </head>
 
-<body class="body">
-  <div>New Site under construction...</div>
+<body>
+  <div class="content">
+    <h1>Justin Toh</h1>
+    <h2>Software Engineer</h2>
+    <p>I’m passionate about building user interfaces & systems with modern web technologies.</p>
+    <p>Currently looking for job opportunities commencing after May 2018.</p>
+  </div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
