--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
     <p>I’m passionate about building user interfaces & systems with modern web technologies.</p>
     <p>Currently looking for job opportunities commencing after May 2018.</p>
   </div>
+  <div class="garden"></div>
   <script type="text/javascript" src="./dist/app.min.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
