--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="body">
-  <div>New Site under construction...</div>
+  <div>new site under construction...</div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
