--- a/src/index.html
+++ b/src/index.html
@@ -25,19 +25,21 @@
 </head>
 
 <body>
-  <div class="content">
-    <h1>Justin Toh</h1>
-    <h2>Software Engineer</h2>
-    <span class="links">
-      <a target="_blank" href="https://github.com/tohjustin"><i data-feather="github"></i></a>
-      <a target="_blank" href="https://medium.com/@justintoh"><i data-feather="book"></i></a>
-      <a target="_blank" href="/dist/resume.pdf"><i data-feather="file-text"></i></a>
-      <a href="mailto:tohjustin@hotmail.com?subject=Hi%20Justin!"><i data-feather="mail"></i></a>
-    </span>
-    <p>I’m passionate about building user interfaces & systems with modern web technologies.</p>
-    <p>Currently looking for job opportunities commencing after May 2018.</p>
+  <div class="content-container">
+    <div class="content">
+      <h1>Justin Toh</h1>
+      <h2>Software Engineer</h2>
+      <span>
+        <a target="_blank" href="https://github.com/tohjustin"><i data-feather="github"></i></a>
+        <a target="_blank" href="https://medium.com/@justintoh"><i data-feather="book"></i></a>
+        <a target="_blank" href="/dist/resume.pdf"><i data-feather="file-text"></i></a>
+        <a href="mailto:tohjustin@hotmail.com?subject=Hi%20Justin!"><i data-feather="mail"></i></a>
+      </span>
+      <p>I’m passionate about building user interfaces & systems with modern web technologies.</p>
+      <p>Currently looking for full-time opportunities commencing after May 2018!</p>
+    </div>
   </div>
-  <div class="garden"></div>
+  <div class="garden-container"></div>
   <script type="text/javascript" src="./dist/app.min.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
