--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <div class="content">
       <h1>Justin Toh</h1>
       <h2>Software Engineer</h2>
-      <span>
+      <span class="links-container">
         <a target="_blank" href="https://github.com/tohjustin"><i data-feather="github"></i></a>
         <a target="_blank" href="https://medium.com/@justintoh"><i data-feather="book"></i></a>
         <a target="_blank" href="/dist/resume.pdf"><i data-feather="file-text"></i></a>
