--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       <span class="links-container">
         <a target="_blank" href="https://github.com/tohjustin"><i data-feather="github"></i></a>
         <a target="_blank" href="https://medium.com/@justintoh"><i data-feather="book"></i></a>
-        <a target="_blank" href="/dist/resume.pdf"><i data-feather="file-text"></i></a>
+        <a target="_blank" href="/dist/resume-justintoh.pdf"><i data-feather="file-text"></i></a>
         <a href="mailto:tohjustin@hotmail.com?subject=Hi%20Justin!"><i data-feather="mail"></i></a>
       </span>
       <p>I’m passionate about building user interfaces & systems with modern web technologies.</p>
