--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="icon" type="image/png" sizes="512x512" href="/dist/images/icon-512x512.png">
     <link rel="icon" type="image/png" sizes="384x384" href="/dist/images/icon-384x384.png">
@@ -25,30 +26,37 @@
 </head>
 
 <body>
-  <div class="content-container">
-    <div class="content">
-      <h1>Justin Toh</h1>
-      <h2>Software Engineer</h2>
-      <span class="links-container">
+    <div class="content-container">
+        <div class="content">
+            <h1>Justin Toh</h1>
+            <h2>Software Engineer</h2>
+            <span class="links-container">
         <a target="_blank" href="https://github.com/tohjustin"><i data-feather="github"></i></a>
         <a target="_blank" href="https://medium.com/@justintoh"><i data-feather="book"></i></a>
         <a target="_blank" href="/dist/resume-justintoh.pdf"><i data-feather="file-text"></i></a>
         <a href="mailto:tohjustin@hotmail.com?subject=Hi%20Justin!"><i data-feather="mail"></i></a>
       </span>
-      <p>I’m passionate about building user interfaces & systems with modern web technologies.</p>
-      <p>Currently looking for full-time opportunities commencing after May 2018!</p>
+            <p>I’m passionate about building user interfaces & systems with modern web technologies.</p>
+        </div>
     </div>
-  </div>
-  <div class="garden-container"></div>
-  <script type="text/javascript" src="./dist/app.min.js"></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-77107001-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+    <div class="garden-container"></div>
+    <script type="text/javascript" src="./dist/app.min.js"></script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-77107001-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 
 </html>
