feat: Update content

--- a/src/index.html
+++ b/src/index.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <link rel="icon" type="image/png" sizes="512x512" href="/dist/images/icon-512x512.png">
-    <link rel="icon" type="image/png" sizes="384x384" href="/dist/images/icon-384x384.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/dist/images/icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="152x152" href="/dist/images/icon-152x152.png">
-    <link rel="icon" type="image/png" sizes="144x144" href="/dist/images/icon-144x144.png">
-    <link rel="icon" type="image/png" sizes="128x128" href="/dist/images/icon-128x128.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/dist/images/icon-96x96.png">
-    <link rel="icon" type="image/png" sizes="72x72" href="/dist/images/icon-72x72.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/dist/images/icon-512x512.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="384x384" href="/dist/images/icon-384x384.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/dist/images/icon-192x192.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="/dist/images/icon-152x152.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="/dist/images/icon-144x144.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="128x128" href="/dist/images/icon-128x128.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="96x96" href="/dist/images/icon-96x96.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="/dist/images/icon-72x72.png">
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./dist/style.min.css">
-    <title>Hi, I'm Justin!</title>
-</head>
-
-<body>
-    <div class="content-container">
-        <div class="content">
-            <h1>Justin Toh</h1>
-            <h2>Software Engineer</h2>
-            <span class="links-container">
-        <a target="_blank" href="https://github.com/tohjustin"><i data-feather="github"></i></a>
-        <a target="_blank" href="https://medium.com/@justintoh"><i data-feather="book"></i></a>
-        <a target="_blank" href="/dist/resume-justintoh.pdf"><i data-feather="file-text"></i></a>
-        <a href="mailto:tohjustin@hotmail.com?subject=Hi%20Justin!"><i data-feather="mail"></i></a>
-      </span>
-            <p>I’m passionate about building user interfaces & systems with modern web technologies.</p>
+    <head>
+        <link rel="icon" type="image/png" sizes="512x512" href="/dist/images/icon-512x512.png">
+        <link rel="icon" type="image/png" sizes="384x384" href="/dist/images/icon-384x384.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="/dist/images/icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="152x152" href="/dist/images/icon-152x152.png">
+        <link rel="icon" type="image/png" sizes="144x144" href="/dist/images/icon-144x144.png">
+        <link rel="icon" type="image/png" sizes="128x128" href="/dist/images/icon-128x128.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/dist/images/icon-96x96.png">
+        <link rel="icon" type="image/png" sizes="72x72" href="/dist/images/icon-72x72.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/dist/images/icon-512x512.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="384x384" href="/dist/images/icon-384x384.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/dist/images/icon-192x192.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="/dist/images/icon-152x152.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="/dist/images/icon-144x144.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="128x128" href="/dist/images/icon-128x128.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="96x96" href="/dist/images/icon-96x96.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="/dist/images/icon-72x72.png">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./dist/style.min.css">
+        <title>Hi, I'm Justin!</title>
+    </head>
+    <body>
+        <div class="content-container">
+            <div class="content">
+                <h1>Justin Toh</h1>
+                <h2>Software Engineer</h2>
+                <p>I’m passionate about building user interfaces & systems.</p>
+                <span class="links-container">
+                    <a target="_blank" href="https://github.com/tohjustin"><i data-feather="github"></i></a>
+                    <a target="_blank" href="/dist/resume-justintoh.pdf"><i data-feather="file-text"></i></a>
+                    <a href="mailto:tohjustin@hotmail.com?subject=Hi%20Justin!"><i data-feather="mail"></i></a>
+                </span>
+            </div>
         </div>
-    </div>
-    <div class="garden-container"></div>
-    <script type="text/javascript" src="./dist/app.min.js"></script>
-</body>
-
+        <div class="garden-container"></div>
+        <script type="text/javascript" src="./dist/app.min.js"></script>
+    </body>
 </html>
