--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@ Recent posts
 </h2>
 <div class=posts>
 <div class=post>
+<div class=meta>Nov 16, 2021</div>
+<a class=title href=/posts/2021-11-16-goreleaser-krew-integration/>Publishing Krew plugin manifests with GoReleaser</a> &mdash;
+<span class=description>
+GoReleaser v1.0.0 introduced a Krew integration to generate and publish Krew Plugin Manifests. This is a walkthrough of using GoReleaser to publish kubectl plugins to a custom custom plugin index.
+</span>
+</div>
+<div class=post>
 <div class=meta>Nov 1, 2021</div>
 <a class=title href=/posts/2021-11-01-kube-lineage/>kube-lineage: A CLI tool for visualizing Kubernetes object relationships</a> &mdash;
 <span class=description>
