deploy: 5bc8fb574b18d10caf07d0b7645981bdabbc187f

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Recent posts
 <div class=meta>Nov 16, 2021</div>
 <a class=title href=/posts/2021-11-16-goreleaser-krew-integration/>Publishing Krew plugin manifests with GoReleaser</a> &mdash;
 <span class=description>
-GoReleaser v1.0.0 introduced a Krew integration to generate and publish Krew Plugin Manifests. This is a walkthrough of using GoReleaser to publish kubectl plugins to a custom custom plugin index.
+GoReleaser v1.0.0 introduced a Krew integration to generate and publish Krew Plugin Manifests. This is a walkthrough of using GoReleaser to publish kubectl plugin manifest to a custom plugin index.
 </span>
 </div>
 <div class=post>
