--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html><html>
 <head>
 <meta name=generator content="Hugo 0.88.1">
+<base href=https://tohjustin.github.io/>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge"><title>tohjustin's blog - YAML Engineer. Previously pushing packets & pixels. </title><link rel=icon type=image/png href=icons/favicon.png><meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=alternate type=application/rss+xml href=https://tohjustin.github.io/index.xml title="tohjustin's blog">
