deploy: a3e8606b39b0b35af66fc5a83a10c06fd4851dec

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@ Recent posts
 </h2>
 <div class=posts>
 <div class=post>
+<div class=meta>Mar 7, 2022</div>
+<a class=title href=/posts/2022-03-04-kube-lineage-v0.5.0/>kube-lineage v0.5.0</a> &mdash;
+<span class=description>
+Filtering by resource types
+</span>
+</div>
+<div class=post>
 <div class=meta>Nov 16, 2021</div>
 <a class=title href=/posts/2021-11-16-goreleaser-krew-integration/>Publishing Krew plugin manifests with GoReleaser</a> &mdash;
 <span class=description>
