deploy: d19197b5b75e6064e9c28178f8eb86e6d171ee30

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ Recent posts
 <div class=posts>
 <div class=post>
 <div class=meta>Mar 7, 2022</div>
-<a class=title href=/posts/2022-03-04-kube-lineage-v0.5.0/>kube-lineage v0.5.0</a> &mdash;
+<a class=title href=/posts/2022-03-07-kube-lineage-v0.5.0/>kube-lineage v0.5.0</a> &mdash;
 <span class=description>
-Filtering by resource types
+Filtering objects by resource types.
 </span>
 </div>
 <div class=post>
